[Asmita]Add:Implemented validation for booking an appointment.
